fixed glyphicon visibility issue on UI among a couple other small changes

--- a/examples/css/style.css
+++ b/examples/css/style.css
@@ -119,7 +119,7 @@ body {
     color: #fff;
 }
 .nav-tabs .active .glyphicon {
-    color: #333;
+    color: white;
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
